# C10K

./: .dockerignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  conanfile.txt
.devcontainer/: Copy_keys.bat  Dockerfile  devcontainer.json
apps/: CMakeLists.txt  Epoll_test.c  Run.c  Run_calc_srv.c  Run_calc_udp_srv.c  Run_unix_srv.c  Server_example.c
include/Nettverksprog/: Threadpool.hpp
include/unix/: boolset.h  endpoint.h  endpoint2.h  http.h  queue.h  stack.h  workers.h
scripts/: conan_build.sh  deploy.sh  netcat_udp.sh
src/: CMakeLists.txt
src/Nettverksprog/: CMakeLists.txt  Threadpool.cpp
src/unix/: CMakeLists.txt  boolset.c  endpoint.c  endpoint2.c  endpoint_admin.c  http.c  queue.c  stack.c  workers.c
test/: CMakeLists.txt  boolset-T.cpp  endpoint-T.cpp  http-T.cpp  queue-T.cpp  stack-T.cpp  sum-T.cpp  workers-T.cpp
